@@ -12,39 +12,37 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public enum Role {
 
-  USER(Collections.emptySet()),
-  ADMIN(
-          Set.of(
-                  Permission.ADMIN_READ,
-                  Permission.ADMIN_UPDATE,
-                  Permission.ADMIN_DELETE,
-                  Permission.ADMIN_CREATE,
-                  Permission.MANAGER_READ,
-                  Permission.MANAGER_UPDATE,
-                  Permission.MANAGER_DELETE,
-                  Permission.MANAGER_CREATE
-          )
-  ),
-  MANAGER(
-          Set.of(
-                  Permission.MANAGER_READ,
-                  Permission.MANAGER_UPDATE,
-                  Permission.MANAGER_DELETE,
-                  Permission.MANAGER_CREATE
-          )
-  )
+    USER(Collections.emptySet()),
+    ADMIN(
+            Set.of(
+                    Permission.ADMIN_READ,
+                    Permission.ADMIN_UPDATE,
+                    Permission.ADMIN_DELETE,
+                    Permission.ADMIN_CREATE,
+                    Permission.MANAGER_READ,
+                    Permission.MANAGER_UPDATE,
+                    Permission.MANAGER_DELETE,
+                    Permission.MANAGER_CREATE
+            )
+    ),
+    MANAGER(
+            Set.of(
+                    Permission.MANAGER_READ,
+                    Permission.MANAGER_UPDATE,
+                    Permission.MANAGER_DELETE,
+                    Permission.MANAGER_CREATE
+            )
+    );
 
-  ;
+    @Getter
+    private final Set<Permission> permissions;
 
-  @Getter
-  private final Set<Permission> permissions;
-
-  public List<SimpleGrantedAuthority> getAuthorities() {
-    var authorities = getPermissions()
-            .stream()
-            .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
-            .collect(Collectors.toList());
-    authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
-    return authorities;
-  }
+    public List<SimpleGrantedAuthority> getAuthorities() {
+        var authorities = getPermissions()
+                .stream()
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                .collect(Collectors.toList());
+        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
+        return authorities;
+    }
 }
